--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 
-<h3> Cooper Jumamil's Homepage </h3>
-
-
+<head>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="DIRECTlink.pictureFILE">
+	<title> TAB TITLE </title>
+</head>
 
 
 
