--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="DIRECTlink.pictureFILE">
+  <link rel="icon" href="https://i.pinimg.com/originals/d9/01/00/d90100e3f32197b9a4d9a3d3d475d23b.png">
 	<title> TAB TITLE </title>
 </head>
 
