--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <h1> Cooper Jumamil's Website
 	</h1>
 	
-	<p>test 
+	<p>This is a test. Thomas is fat.
 	</p>
 <head>
   <link rel="stylesheet" href="style.css">
