--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <html>
 <h1> 
+  <br>
   Cooper Jumamil's Website
 	</h1>
 <body> 
   <ul>
     <li><a href="https://wvcs.github.io/website-Cjumamil/"> Home </a></li>"
-    <li><a href="https://www.powayusd.com/en-US/Schools/HS/WVHS/HOME"> Westview Homepage </a></li>
+    <li><a href="https://www.powayusd.com/en-US/Schools/HS/WVHS/HOME"> Westview 
+      Homepage </a></li>
     <li><a href="https://wvcs.github.io/website-Cjumamil/"> Home </a></li>
     <li><a href="https://wvcs.github.io/website-Cjumamil/"> Home </a></li>
   </ul>
-    
+  </body>  
 	<p>
-    This is a test. Thomas is fat.
+    Welcome to my website
 	</p>
 <head>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="https://i.pinimg.com/originals/d9/01/00/d90100e3f32197b9a4d9a3d3d475d23b.png">
-	<title> COOPER JUMAMIL </itle>
+	<title> COOPER JUMAMIL </title>
 </head>
-
-
 
 </html>
