--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</p>
 <head>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="https://i.pinimg.com/originals/d9/01/00/d90100e3f32197b9a4d9a3d3d475d23b.png">
+  <link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.medicalnewstoday.com%2Farticles%2F322868&psig=AOvVaw3chNArYFTwp1GIlM4UEDGx&ust=1642005413949000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCMjfiP6QqvUCFQAAAAAdAAAAABAD">
 	<title> COOPER JUMAMIL </title>
 </head>
 
