--- a/index.html
+++ b/index.html
@@ -5,20 +5,24 @@
 	</h1>
 <body> 
   <ul>
-    <li><a href="https://wvcs.github.io/website-Cjumamil/"> Home </a></li>"
+    <li><a href="https://wvcs.github.io/website-Cjumamil/"> Home </a></li>
+    <li><a href="link here"> Home </a></li>
+    <li><a href="link here"> Home </a></li>
     <li><a href="https://www.powayusd.com/en-US/Schools/HS/WVHS/HOME"> Westview 
       Homepage </a></li>
-    <li><a href="https://wvcs.github.io/website-Cjumamil/"> Home </a></li>
-    <li><a href="https://wvcs.github.io/website-Cjumamil/"> Home </a></li>
   </ul>
   </body>  
 	<p>
     Welcome to my website
-	</p>
+         	</p>
 <head>
+  
+  <p>
+        <img src = https://th.bing.com/th/id/R.70c434db97001a97017de0f203c3d055?rik=EQ%2bJIQIMfRoT0Q&riu=http%3a%2f%2fwww.holidogtimes.com%2fwp-content%2fuploads%2f2017%2f08%2fgolden-retriever-2-1024x683.jpg%3f2e4e73%262e4e73&ehk=wWfITwtlyS7nUI3tFEn%2frCK5Y8F9B6JLhhFGQ97i%2bgs%3d&risl=&pid=ImgRaw&r=0>
+  </p>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.medicalnewstoday.com%2Farticles%2F322868&psig=AOvVaw3chNArYFTwp1GIlM4UEDGx&ust=1642005413949000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCMjfiP6QqvUCFQAAAAAdAAAAABAD">
 	<title> COOPER JUMAMIL </title>
 </head>
-
+  
 </html>
