--- a/index.html
+++ b/index.html
@@ -27,3 +27,17 @@
 </head>
   
 </html>
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title> COOPER JUMAMIL </title>
+  <link rel="icon" type="image/x-icon" href="https://i.guim.co.uk/img/media/fe1e34da640c5c56ed16f76ce6f994fa9343d09d/0_174_3408_2046/master/3408.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=67773a9d419786091c958b2ad08eae5e">
+</head>
+<body>
+
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
