--- a/index.html
+++ b/index.html
@@ -22,22 +22,9 @@
   </p1>
   
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.medicalnewstoday.com%2Farticles%2F322868&psig=AOvVaw3chNArYFTwp1GIlM4UEDGx&ust=1642005413949000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCMjfiP6QqvUCFQAAAAAdAAAAABAD">
+  <link rel="icon" href="">
 	<title> COOPER JUMAMIL </title>
 </head>
   
 </html>
 
-<!DOCTYPE html>
-<html>
-<head>
-  <title> COOPER JUMAMIL </title>
-  <link rel="icon" type="image/x-icon" href="https://i.guim.co.uk/img/media/fe1e34da640c5c56ed16f76ce6f994fa9343d09d/0_174_3408_2046/master/3408.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=67773a9d419786091c958b2ad08eae5e">
-</head>
-<body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
-</html>
