--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body> 
   <ul>
     <li><a href="https://wvcs.github.io/website-Cjumamil/"> Home </a></li>
-    <li><a href="app.html"> Page 2 </a></li>
+    <li><a href="apps.html"> Page 2 </a></li>
     <li><a href="link here"> Home </a></li>
     <li><a href="https://www.powayusd.com/en-US/Schools/HS/WVHS/HOME"> Westview 
       Homepage </a></li>
