--- a/apps.html
+++ b/apps.html
@@ -1,1 +1,53 @@
+<html>
+<h1> 
+  <br>
+  <br>
+  Cooper Jumamil's Website
+	</h1>
+<body> 
+  <ul>
+    <li><a href="https://wvcs.github.io/website-Cjumamil/"> Home </a></li>
+    <li><a href="apps.html"> Applications </a></li>
+    <li><a href="link here"> Home </a></li>
+    <li><a href="https://www.powayusd.com/en-US/Schools/HS/WVHS/HOME"> Westview 
+      Homepage </a></li>
+  </ul>
+  </body>  
+	<p>
+    Visit My Applications
+         	</p>
+<head>
+  
+      
+  
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="">
+	<title> COOPER JUMAMIL'S APPS </title>
+</head>
+  
+</html>
 
+<p1>
+  <center>
+    <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/don9m-1G-32vnVtskTLwpehiG0gf-KXFTIDd16KOaJ9/embed?nosource"></iframe>
+  
+  <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/yWb2q3xO7cF9CBHxnV0_iE55Ap2rgCXIY6rhQ85gRMA/embed?nosource"></iframe>   
+
+<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/LKJVGevUU8MV_qzHf7k-jWh0e-UgM8fljpNM4TlMU_O/embed?nosource"></iframe></iframe>   
+
+<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/pfUH_jPNBk1SRL1Fqof95QgSDGZm2vYUoN9VLq52hwd/embed?nosource"></iframe>
+  
+  <br>
+
+ <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/don9m-1G-32vnVtskTLwpehiG0gf-KXFTIDd16KOaJ9/embed?nosource"></iframe></iframe>  
+
+<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/rhA9Cc_i19NYM6eWBMQ6-VqRwPbfEbB4qnIkeS5GUZd/embed?nosource"></iframe>
+
+<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/CpFvkDJP39-K358fiSKWPeG1hloSRSkjvl98GSLd_U9/embed?nosource"></iframe>
+
+<br>
+
+<iframe src="https://scratch.mit.edu/projects/563086365/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+
+</p1>
+  
