--- a/apps.html
+++ b/apps.html
@@ -8,7 +8,7 @@
   <ul>
     <li><a href="https://wvcs.github.io/website-Cjumamil/"> Home </a></li>
     <li><a href="apps.html"> Applications </a></li>
-    <li><a href="link here"> Home </a></li>
+    <li><a href="https://www.youtube.com/"> YouTube </a></li>
     <li><a href="https://www.powayusd.com/en-US/Schools/HS/WVHS/HOME"> Westview 
       Homepage </a></li>
   </ul>
@@ -38,6 +38,7 @@
 <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/pfUH_jPNBk1SRL1Fqof95QgSDGZm2vYUoN9VLq52hwd/embed?nosource"></iframe>
   
   <br>
+  <br>
 
  <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/don9m-1G-32vnVtskTLwpehiG0gf-KXFTIDd16KOaJ9/embed?nosource"></iframe></iframe>  
 
@@ -45,6 +46,7 @@
 
 <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/CpFvkDJP39-K358fiSKWPeG1hloSRSkjvl98GSLd_U9/embed?nosource"></iframe>
 
+<br>
 <br>
 
 <iframe src="https://scratch.mit.edu/projects/563086365/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
