--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <ul>
     <li><a href="https://wvcs.github.io/website-Cjumamil/"> Home </a></li>
     <li><a href="apps.html"> Applications </a></li>
-    <li><a href="link here"> Home </a></li>
+    <li><a href="https://www.youtube.com/"> YouTube </a></li>
     <li><a href="https://www.powayusd.com/en-US/Schools/HS/WVHS/HOME"> Westview 
       Homepage </a></li>
   </ul>
