--- a/apps.html
+++ b/apps.html
@@ -17,12 +17,9 @@
     Visit My Applications
          	</p>
 <head>
-  
-      
-  
-  <link rel="stylesheet" href="style.css">
   <link rel="icon" href="">
 	<title> COOPER JUMAMIL'S APPS </title>
+	  <link rel="icon" type="image/x-icon" href="http://images6.fanpop.com/image/photos/41400000/happy-golden-retrievers-golden-retreivers-41442084-450-475.jpg">
 </head>
   
 </html>
