--- a/apps.html
+++ b/apps.html
@@ -1,4 +1,5 @@
 <html>
+	
 <h1> 
   <br>
   <br>
@@ -17,7 +18,8 @@
     Visit My Applications
          	</p>
 <head>
-  <link rel="icon" href="">
+  <link rel="stylesheet" href="style.css">
+	  <link rel="icon" href="style.css">
 	<title> COOPER JUMAMIL'S APPS </title>
 	  <link rel="icon" type="image/x-icon" href="http://images6.fanpop.com/image/photos/41400000/happy-golden-retrievers-golden-retreivers-41442084-450-475.jpg">
 </head>
