--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </p1>
   
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="">
+  <link rel="icon" href="style.css">
 	<title> COOPER JUMAMIL </title>
 </head>
   
