--- a/apps.html
+++ b/apps.html
@@ -18,8 +18,8 @@
     Visit My Applications
          	</p>
 <head>
-  <link rel="stylesheet" href="style.css">
-	  <link rel="icon" href="style.css">
+  <link rel="stylesheet" href="app.css">
+	  <link rel="icon" href="app.css">
 	<title> COOPER JUMAMIL'S APPS </title>
 	  <link rel="icon" type="image/x-icon" href="http://images6.fanpop.com/image/photos/41400000/happy-golden-retrievers-golden-retreivers-41442084-450-475.jpg">
 </head>
